client/src/components/tracks.css
* {
    margin: 0;
    padding: 0;
}
#overlap-tracks-msg {
    color:#312E50;
    -webkit-text-stroke-width: 1.4px; 
    -webkit-text-stroke-color: #312E50;
    font-family: 'Archivo', sans-serif;
    font-size: 3.5vh;
    font-style: bold;
    text-align: left;
    margin-left: 3vh;
}

#num-overlap {
    font-size:10vh;
    font-style:bold;
    font-weight:700;
    display:inline; 
    margin-right:1.3vh;
}


#tracks {
    background-color: #C7CAFF;
    max-width: 85%;
    overflow: hidden;
    text-align: left;
}

#track-artwork {
    width: 12vh;
    box-shadow: 0px 0px 8px rgba(49, 46, 80,0.25), -2vh -2vh rgba(49, 46, 80, 0.35);
    align-self: center;
}
#track-name {
    color:#312E50;
    font-size: 2.7vh;
    font-weight: bold;
    margin-left: 1.5vh;
    margin-right: 3vh;
    margin-top: -6vh;
}

#track-artist {
    font-size: 2.3vh;
    text-align: left;
    font-weight: normal;
}

.one-track {
    display: inline-flex;
    margin: 2vh;
    max-width: 100%;
}

.scrolling-wrapper {
    max-width:100%;
    margin-top: 3vh;
}

.text-wrapper {
    display: flex;
    align-self: center;
  }

